; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/kernel/extr_perf_event_mipsxx.c_mipsxx_pmu_write_control.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/kernel/extr_perf_event_mipsxx.c_mipsxx_pmu_write_control.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @mipsxx_pmu_write_control to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mipsxx_pmu_write_control(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i32 @mipsxx_pmu_swizzle_perf_idx(i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  switch i32 %7, label %20 [
    i32 0, label %8
    i32 1, label %11
    i32 2, label %14
    i32 3, label %17
  ]

8:                                                ; preds = %2
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @write_c0_perfctrl0(i32 %9)
  br label %20

11:                                               ; preds = %2
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @write_c0_perfctrl1(i32 %12)
  br label %20

14:                                               ; preds = %2
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @write_c0_perfctrl2(i32 %15)
  br label %20

17:                                               ; preds = %2
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @write_c0_perfctrl3(i32 %18)
  br label %20

20:                                               ; preds = %8, %11, %14, %17, %2
  ret void
}

declare dso_local i32 @mipsxx_pmu_swizzle_perf_idx(i32) #1

declare dso_local i32 @write_c0_perfctrl0(i32) #1

declare dso_local i32 @write_c0_perfctrl1(i32) #1

declare dso_local i32 @write_c0_perfctrl2(i32) #1

declare dso_local i32 @write_c0_perfctrl3(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
